--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 packages = [{include = "gendiff"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.8"
+prompt = "^0.4.1"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
