--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           make check
       - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v3.2.0
-        if: github.ref_name == 'main'
+        uses: paambaati/codeclimate-action@v4.0.0
         env:
           CC_TEST_REPORTER_ID: 4882e6a8afcf3fbb768ae43bd29363474d08f7f2a14b5870a5168dd688dd7cc6
         with:
           coverageCommand: make test-coverage
+          debug: true
